--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ MarkupSafe==1.1.1
 itsdangerous==1.1.0
 Flask-Moment==0.10.0
 mysql-connector-python==8.0.31
+python-docx==0.8.11
+flask_login==0.6.2
