--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask_WTF==0.14.3
 MarkupSafe==1.1.1
 itsdangerous==1.1.0
 Flask-Moment==0.10.0
-mysql-connector-python==8.0.31
 python-docx==0.8.11
 flask_login==0.6.2
+openpyxl==3.1.2
+# mysql-connector-python==8.0.31
